--- a/src/app/todolist/todolist.component.css
+++ b/src/app/todolist/todolist.component.css
@@ -1,3 +1,9 @@
-.list-group-item span{
+.list-group-item span {
 	margin-right: 2em;
+}
+.list-group-item span.done {
+  text-decoration: line-through;
+}
+.pull-right button {
+  margin-right: 10px;
 }
