--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -3,20 +3,25 @@
   <ul class="list-group">
     <li class="list-group-item list-group-item-action" *ngFor="let item of items" >
 
-      <span>{{item?.name}}</span>
+      <span [class.done]="item?.isDone">{{ item?.text }}</span>
       <div class="pull-right">
-          <button class="btn btn-primary btn-xs fa fa-pencil" (click)="onEdit(item)"></button>
-          <button class="btn btn-danger btn-xs fa fa-trash-o" (click)="onRemove(item)"></button>
+          <button class="btn btn-primary btn-xs fa"
+                  [class.fa-minus]="item?.isDone"
+                  [class.fa-check]="!item?.isDone"
+                  (click)="changeDoneStatus(item)"
+          ></button>
+          <button class="btn btn-primary btn-xs fa fa-pencil" (click)="editOrCreate(item)"></button>
+          <button class="btn btn-danger btn-xs fa fa-trash-o" (click)="remove(item?.id)"></button>
       </div>
     </li>
 
   </ul>
 </div>
 
+<br/>
+
 <!-- NEW ITEM -->
 <div class="row justify-content-md-center">
-  <nav>
-    <a routerLink="/new-item" class="pull-right">New item</a>
-  </nav>
+  <button class="btn btn-primary btn-xs fa fa-plus" (click)="editOrCreate()"> Add new item </button>
 </div>
 
